--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-chat-engine": "^1.9.2",
+    "react-chat-ui": "^0.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
