--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
     "@types/passport": "^1.0.6",
+    "cookie-parser": "^1.4.5",
     "mongoose": "^5.12.11",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -41,6 +42,7 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
