--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "^17.0.5",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
