--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,9 @@
 {
     "name": "api",
     "version": "0.0.1",
+    "engines": {
+        "node": "14.16.1"
+    },
     "description": "",
     "author": "",
     "private": true,
@@ -9,7 +12,7 @@
         "prebuild": "rimraf dist",
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "nest start",
+        "start": "nest start -p $PORT",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
@@ -18,8 +21,7 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json",
-        "postinstall": "npm run prestart:prod"
+        "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
         "@nestjs/common": "^7.6.15",
